1.0
===

- Applied Steven Radack's patch fixing MR-449
  "Change ResourceFileHandler to add HTTP cache headers"
  Used some of Andre Loker's suggestions. Wont use Assembly CodeBase as I think that might 
  introduce security checks that are hard to deal on shared hosts

- Applied Andre Loker's patch fixing MR-453
  "FormHelper.PasswordNumberField/PasswordField: option to decide whether to fill value attribute"

- Applied Mike Nichols's patch fixing MR-455
  DefaultUrlBuilder doesn't persist route parameters when using RedirectUsingNamedRoute

- Applied Andre Loker's patch fixing MR-456
  "Routing Engine: support for root-routing + excluding MonoRail resource files from routing"

- Applied Mike Nichols's patch fixing MR-396
  Get WindsorIntegration on DynamicActionProviders.

- Applied Gildas's patch fixing MR-433 
  Support for the jQuery Validation plugin.

- Applied Fixed MR-428
  Transformation Filters didn't work in trunk

- Applied Aaron Jensen's adding call to RaiseUnhandledError when a controller fails to be created.

- Applied Roger Chapman's patch adding the pascalcasetoword option to FormHelper.Select options dictionary. 

- Applied Dan Goldstein's patch fixing MR-346
  "FormHelper's disablevalidation parameter only works when in Push command and on field"

- Fixed MR-409
  Introduced IMonoRailContainerEvents and IMonoRailConfigurationEvents that might be implemented by the
  HttpApplication subclass

- Fixed MR-412
  "When applying a layout attribute over an Action, layout doesn't render for the rendered view."

- Applied James Curran's patch fixing MR-391
  "ViewComponentDetailsAttribute use could lead to duplicate names."

- Applied Mike Nichols' patch fixing MR-392
  "FormHelper.LiteralFor feature addition"

- Applied Alwin's patch fixing MR-398
  "Could not save <model>. Ambiguous match found. (AmbiguousMatchException 
   when using Scaffolding and ActiveRecordValidationBase<T>)"

- Applied James Curran's patch fixing MR-419